added event listeners

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="overlap">
-      <footer class="footer">
+      <footer class="footer"> 
         <div class="container">
           <form id="pet-form">
               <div class="form-group">
@@ -47,7 +47,7 @@
               </div>
           </form>
           <div id="results"></div>
-      </div>
+        </div>
 
 
       </footer>
@@ -65,7 +65,7 @@
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit pellentesque
                 </p>
               </div>
-              <div class="city">Nairobi</div>
+              <div class="status">Adoptable</div>
               <div class="detailWrapper1">
                 <div class="breedDIV">
                   <div class="breedtext">Border <br />Colie</div>
