--- a/index.html
+++ b/index.html
@@ -93,6 +93,25 @@
       
     </div>
   </div>
+  <div class="box">
+    <div class="footers-footer">
+      <div class="overlap">
+        <div class="logo">
+          <img class="pet" src="img/pet.png" />
+          <div class="text-wrapper">WhiskerMatch</div>
+        </div>
+        <p class="p">Sign up for our newsletter</p>
+        <div class="newsletter">
+          <div class="overlap-group">
+            <div class="div-wrapper"><div class="text-wrapper-3">Subscribe</div></div>
+            <div class="text-wrapper-4">Email</div>
+          </div>
+        </div>
+        <div class="text-wrapper-5">©2024 All rights reserved</div>
+        <img class="line" src="img/line-2.svg" />
+      </div>
+    </div>
+  </div>
   
 <script src="/src/index.js"></script>
 </body>
