Add submit button

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   </div>
   <div class="box">
     <div class="footers-footer">
-      <div class="overlap">
+      <div class="overlapk">
         <div class="logo">
           <img class="pet" src="img/pet.png" />
           <div class="text-wrapper">WhiskerMatch</div>
