--- a/index.html
+++ b/index.html
@@ -100,11 +100,13 @@
           <img class="pet" src="img/pet.png" />
           <div class="text-wrapper">WhiskerMatch</div>
         </div>
-        <p class="p">Sign up for our newsletter</p>
-        <div class="newsletter">
-          <div class="overlap-group">
-            <div class="div-wrapper"><div class="text-wrapper-3">Subscribe</div></div>
-            <div class="text-wrapper-4">Email</div>
+        <div class="box">
+          <img src="https://lh3.google.com/u/0/d/1-WTX2Kw4ZlgLnwT9gYyFOxVXowT9eS-t=w1375-h881-iv1" alt="" />
+          <h2>Subscribe to our Newsletter</h2>
+          <p>Our weekly newsletter provides you with the latest and most important happenings in the industry.</p>
+          <div class="form-control">
+            <input type="text" class="input" placeholder="Enter e-mail adress" />
+            <button class="btn">Subscribe</button>
           </div>
         </div>
         <div class="text-wrapper-5">©2024 All rights reserved</div>
