--- a/index.html
+++ b/index.html
@@ -93,24 +93,25 @@
       
     </div>
   </div>
-  <div class="box">
+  <div class="box1">
     <div class="footers-footer">
       <div class="overlapk">
         <div class="logo">
-          <img class="pet" src="img/pet.png" />
-          <div class="text-wrapper">WhiskerMatch</div>
+          <img class="pet" src="assets/pet.png" />
+          <div class="logoName">WhiskerMatch</div>
         </div>
-        <div class="box">
-          <img src="https://lh3.google.com/u/0/d/1-WTX2Kw4ZlgLnwT9gYyFOxVXowT9eS-t=w1375-h881-iv1" alt="" />
-          <h2>Subscribe to our Newsletter</h2>
-          <p>Our weekly newsletter provides you with the latest and most important happenings in the industry.</p>
-          <div class="form-control">
-            <input type="text" class="input" placeholder="Enter e-mail adress" />
-            <button class="btn">Subscribe</button>
+
+          <div class="inputEmail">
+            <form id="form">
+              <label><h4>Subscribe to our newsletter</h4><input type="text" /></label>
+              <br /><br />
+              <button type="submit" class="submit">Submit</button>
+            </form>
+            <p id="log"></p>
           </div>
-        </div>
-        <div class="text-wrapper-5">©2024 All rights reserved</div>
-        <img class="line" src="img/line-2.svg" />
+          
+      </div>
+        <div class="copyright">©2024 All rights reserved</div>
       </div>
     </div>
   </div>
