--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img id="catdogillus" src="assets/catDogIllus.png" alt="Cat and Dog Illustration">
 
         <header class="header">
-          <img class="pet" src="assets/pet.png" alt="Pet Logo">
+          <img class="pet" src="assets/petBlack.png" alt="Pet Logo">
           <div class="shortcuts">
             <div class="howitworks">How it Works</div>
             <div class="helpus">Help Us</div>
